tests/mm0_mmu/fail/bad-sort3124.mm0
-- bad modifier order
provable pure strict free sort s3124;